--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     
 	Hello! I am currently a MS student working in the <a href="https://www.cs.purdue.edu/">	Department of Computer Science</a> at Purdue University. I recently finished my undergraduate studies at Birla Institute of Technology and Science Pilani, Pilani campus in the wonderful<a href = "https://www.bits-pilani.ac.in/pilani/computerscience/computerScience" target = "_blank"> CS department</a>. My research interests lie in machine learning and artificial intelligence. In the past, I have enjoyed working on problems in parallel/distributed computing and combinatorial optimization. Recently, I have been interested in fast optimization algorithms. <br>    
 <br>
-Outside of research, I enjoy playing Badminton, Soccer, Tennis and Table Tennis. I am an avid fan of the English Premier League and I support Manchester United Football Club. I am almost always listening to music and I enjoy hip-hop, indie/alternative, and some instrumental music. I was born and raised in Austin, Texas, and truly love the city. If we share any interests or you would just like to chat, please do not hesistate to contact me!<br>
+Outside of research, I enjoy playing Badminton, Soccer, Tennis and Table Tennis. I am an avid fan of the English Premier League and I support Manchester United Football Club. I am almost always listening to music and I enjoy hip-hop, indie/alternative, and some instrumental music. I was born and raised in Haryana, India and truly love the city. If we share any interests or you would just like to chat, please do not hesistate to contact me!<br>
 <br>
 
 <br>
